Opened 20 months ago
Closed 4 months ago
#18448 closed bug (fixed)
[FontDemo] font cycling is broken, still
Reported by: | WildKeccak | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | Applications | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When I open FontDemo and select a "font family", FontDemo loses the ability to cycle fonts until I select a specific font.
Change History (2)
comment:1 by , 4 months ago
Component: | - General → Applications |
---|
comment:2 by , 4 months ago
Milestone: | Unscheduled → R1/beta6 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fix merged in hrev58190.