FontDemo: Fix selecting a font family directly, without selecting a specific style

Fixes #18448

Change-Id: Ia32254721696c691b2c49cede70c2818b6668b2f
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8382
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>